# CG

./: CMakeLists.txt  README.md
p1/: CMakeLists.txt
tp1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
tp1.ex1/: CMakeLists.txt  README.md  main.cpp
tp1/tp1/: Makefile  cmake_install.cmake  tp1
tp2_ex1/: CMakeLists.txt  README.md  main.cpp
tp2_ex2/: CMakeLists.txt  main.cpp
tp2_ex3/: CMakeLists.txt  README.md  main.cpp
tp2_ex4/: CMakeLists.txt  README.md  coord.txt  main.cpp
tp2_ex4/Coordinates/: a.out  coord.txt  indices.txt  letra.xcf  pixel.txt  pixelToCoordinates  pixelToCoordinates.c  pixelToCoordinates.cpp
tp3_ex1/: CMakeLists.txt  main.cpp
tp3_ex2/: CMakeLists.txt  README.md  coordenadas.txt  indices.txt  main.cpp  teste.txt
tp4/: CMakeLists.txt  main.cpp
